--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
+        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
           <div>
             <h1>Amaze Basket</h1>
             <h2>Your One Stop solution for your daily Groceries need.</h2>
