--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Appland Bootstrap Template</title>
+  <title>FAQ - App Page</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -13,14 +13,10 @@
   <link href="assets/img/logo.svg" rel="icon">
   <link href="assets/img/logo.svg" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -34,7 +30,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><img src="assets/img/logo.svg" alt="" class="img-fluid"><span class="logo-text">  Amaze Basket</span></a>
+        <a href="index.html"><img src="assets/img/logo.svg" alt="" class="img-fluid"><span class="logo-text">  App Page</span></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -167,7 +163,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
-            <p>To get out daily new deals and offers subscribe to Amaze Basket.</p>
+            <p>To get out daily new deals and offers subscribe to App Page.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -181,24 +177,24 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-contact" data-aos="fade-up">
-            <h3>Amaze Basket</h3>
+            <h3>App Page</h3>
             <p>
               Your One Stop solution <br>
               for your daily Groceries <br>
               need.<br><br>
-              <strong>Phone:</strong> <a href="tel : +91 96193 88755">+91 96193 88755</a><br>
-              <strong>Email:</strong> <a href="mailto: info.128bytes@gmail.com">info.128bytes@gmail.com</a><br>
+              <strong>Phone:</strong> <a href="#">+91 9xxxx 1234</a><br>
+              <strong>Email:</strong> <a href="#">info@example.com</a><br>
             </p>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="100">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="icofont-rounded-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="about-us.html">About us</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="contact-us.html">Contact us</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="terms-conditions.html">Terms & Conditions</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="privacy-policy.html">Privacy policy</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about-us.html">About us</a></li>
+              <li><a href="contact-us.html">Contact us</a></li>
+              <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+              <li><a href="privacy-policy.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -206,10 +202,10 @@
             <h4>Our Social Networks</h4>
             <p>Follow us on our social media accounts for more details and offer</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="https://instagram.com/amazebasket?igshid=1mesagaa2frq0" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="#" class="twitter"><img src="assets/img/icons/facebook.svg" class="s-icons"></a>
+              <a href="#" class="facebook"><img src="assets/img/icons/instagram.svg" class="s-icons"></a>
+              <a href="#" class="instagram"><img src="assets/img/icons/linkedin.svg" class="s-icons"></a>
+              <a href="#" class="linkedin"><img src="assets/img/icons/twitter.svg" class="s-icons"></a>
             </div>
           </div>
 
@@ -219,23 +215,20 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Amaze Basket</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>App Page</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
   <!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top"><img src="assets/img/icons/up-arrow.svg" class="u-icon"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <!-- Template Main JS File -->
-  <script src="assets/js/animation.js"></script>
+  <script src="assets/js/another-main.js"></script>
 
 </body>
 
