--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Amaze Basket</title>
+  <title>App Page</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -13,12 +13,8 @@
   <link href="assets/img/logo.svg" rel="icon">
   <link href="assets/img/logo.svg" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -30,11 +26,11 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top  header-transparent ">
+  <header id="header" class="fixed-top  header-transparent">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><img src="assets/img/logo.svg" alt="" class="img-fluid"><span class="logo-text">  Amaze Basket</span></a>
+        <a href="index.html"><img src="assets/img/logo.svg" alt="" class="img-fluid"><span class="logo-text">  App Page</span></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -53,15 +49,14 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
-          <div>
-            <h1>Amaze Basket</h1>
+        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
+          <div data-aos="fade-up">
+            <h1>App Page</h1>
             <h2>Your One Stop solution for your daily Groceries need.</h2>
-            <a href="apk-file/Amaze.apk" class="download-btn" download><i class="icofont-download"></i> Download Now</a>
-            <a href="#" class="download-btn"><i class="icofont-info"></i> More Info</a>
+            <a href="apk-file/Amaze.apk" class="download-btn" download><img src="assets/img/icons/download.svg" class="d-icons">  Download Now</a>
+            <a href="#" class="download-btn"><img src="assets/img/icons/i-letter.svg" class="d-icons"> More Info</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
@@ -78,9 +73,9 @@
     <section id="features" class="features">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title" data-aos="fade-up" data-aos-delay="200">
           <h2>App Features</h2>
-          <p>Some great features which offerd by Amaze Basket, To make our customers all requirements fullfil and make them happy. Below we have listed down all the features provided by Amaze Basket.</p>
+          <p>Some great features which offerd by App Page, To make our customers all requirements fullfil and make them happy. Below we have listed down all the features provided by App Page.</p>
         </div>
 
         <div class="row no-gutters">
@@ -88,33 +83,45 @@
             <div class="content d-flex flex-column justify-content-center">
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
-                  <i class="icofont-food-basket"></i>
-                  <h4>SHOP AS PER YOUR NEED.</h4>
+                  <div class="icon-box-main">
+                    <img src="assets/img/icons/basket.svg" class="f-icons">
+                    <h4>SHOP AS PER YOUR NEED.</h4>
+                  </div>
                   <p>Amaze Deliveries with no minimum order value.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <i class="icofont-ui-calendar"></i>
-                  <h4>SCHEDULED DELIVERIES</h4>
+                  <div class="icon-box-main">
+                    <img src="assets/img/icons/schedule.svg" class="f-icons">
+                    <h4>SCHEDULED DELIVERIES</h4>
+                  </div>
                   <p>Order what you need & we take care of your daily needs, everyday !!</p>
                 </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <i class="icofont-ui-clock"></i>
-                  <h4>ON TIME</h4>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+                  <div class="icon-box-main">
+                    <img src="assets/img/icons/clock.svg" class="f-icons">
+                    <h4>ON TIME</h4><br>
+                  </div>
                   <p>Order by midnight, get by 7 am.</p>
                 </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <i class="icofont-thumbs-up"></i>
-                  <h4>FARM FRESH</h4>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+                  <div class="icon-box-main">
+                    <img src="assets/img/icons/fresh.svg" class="f-icons">
+                    <h4>FARM FRESH</h4>
+                  </div>
                   <p>Stay healthy With Our Daily Farm Fresh Products.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-                  <i class="icofont-fast-delivery"></i>
-                  <h4>FASTEST DELEVERY AT YOUR PLACE</h4>
+                  <div class="icon-box-main">
+                    <img src="assets/img/icons/express-delivery.svg" class="f-icons">
+                    <h4>FASTEST DELEVERY AT YOUR PLACE</h4>
+                  </div>
                   <p>Get your order at your doostep before you gets to late.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-                  <i class="icofont-check-circled"></i>
-                  <h4>SUBSCRIBE DAILY NEEDS ONE TIME</h4>
+                  <div class="icon-box-main">
+                    <img src="assets/img/icons/subscribe.svg" class="f-icons">
+                    <h4>SUBSCRIBE DAILY NEEDS ONE TIME</h4>
+                  </div>
                   <p>Don't waste your time to book same order every day. Instead of that just use our subscribe option to subscribe the product.</p>
                 </div>
               </div>
@@ -136,13 +143,13 @@
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Eat fresh, Stay Healthy</h3>
             <p class="font-italic">
-              Fruits and vegetables form the base of everybody’s daily food consumption.Vegetables brought from Amaze Basket are as fresh as buying them from the farm directly and can also be eaten raw, rather than just using them as cooking vegetables. Below some reason to deliver fresh Fruits and Vegetables are :
+              Fruits and vegetables form the base of everybody’s daily food consumption.Vegetables brought from App Page are as fresh as buying them from the farm directly and can also be eaten raw, rather than just using them as cooking vegetables. Below some reason to deliver fresh Fruits and Vegetables are :
             </p> 
             <ul>
-              <li><i class="icofont-check"></i> Fruit and vegetables are a good source of vitamins and minerals, including folate, vitamin C and potassium.</li>
-              <li><i class="icofont-check"></i> Fruit and vegetables taste delicious and there's so much variety to choose from.</li>
-              <li><i class="icofont-check"></i> They can help to reduce your risk of heart disease, stroke and some types of cancer.</li>
-              <li><i class="icofont-check"></i> Fruit and vegetables contribute to a healthy, balanced diet.</li>
+              <img src="assets/img/icons/checked.svg" class="c-icons"> Fruit and vegetables are a good source of vitamins and minerals, including folate, vitamin C and potassium.</li><br>
+              <img src="assets/img/icons/checked.svg" class="c-icons"> Fruit and vegetables taste delicious and there's so much variety to choose from.</li><br>
+              <img src="assets/img/icons/checked.svg" class="c-icons"> They can help to reduce your risk of heart disease, stroke and some types of cancer.</li><br>
+              <img src="assets/img/icons/checked.svg" class="c-icons"> Fruit and vegetables contribute to a healthy, balanced diet.</li>
             </ul>
             <p>
               The produce delivered to you will be as fresh as directly cultivated from the farms resulting in high levels of nutrition.
@@ -175,12 +182,12 @@
     <section id="gallery" class="gallery">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title" data-aos="fade-up">
           <h2>Gallery</h2>
-          <p>How it Amaze Basket works! You can find from below images. But, for getting better user experience download our app and start placing order or daily needs of Fresh Vegetables and Fruit and Milk and daily needs.</p>
+          <p data-aos="fade-up" data-aos-delay="100">How it App Page works! You can find from below images. But, for getting better user experience download our app and start placing order or daily needs of Fresh Vegetables and Fruit and Milk and daily needs.</p>
         </div>
 
-        <div class="owl-carousel gallery-carousel" data-aos="fade-up">
+        <div class="owl-carousel gallery-carousel" data-aos="fade-up" data-aos-delay="200">
          <img src="assets/img/gallery/gallery-1.jpg" alt="" data-gall="gallery-carousel">
          <img src="assets/img/gallery/gallery-2.jpg" alt="" data-gall="gallery-carousel">
          <img src="assets/img/gallery/gallery-3.jpg" alt="" data-gall="gallery-carousel">
@@ -204,7 +211,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
-            <p>To get out daily new deals and offers subscribe to Amaze Basket.</p>
+            <p>To get out daily new deals and offers subscribe to App Page.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -218,24 +225,24 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-contact" data-aos="fade-up">
-            <h3>Amaze Basket</h3>
+            <h3>App Page</h3>
             <p>
               Your One Stop solution <br>
               for your daily Groceries <br>
               need.<br><br>
-              <strong>Phone:</strong> <a href="tel : +91 96193 88755">+91 96193 88755</a><br>
-              <strong>Email:</strong> <a href="mailto: info.128bytes@gmail.com">info.128bytes@gmail.com</a><br>
+              <strong>Phone:</strong> <a href="#">+91 9xxxx 1234</a><br>
+              <strong>Email:</strong> <a href="#">info@example.com</a><br>
             </p>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="100">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="icofont-rounded-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="about-us.html">About us</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="contact-us.html">Contact us</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="terms-conditions.html">Terms & Conditions</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="privacy-policy.html">Privacy policy</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about-us.html">About us</a></li>
+              <li><a href="contact-us.html">Contact us</a></li>
+              <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+              <li><a href="privacy-policy.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -243,10 +250,10 @@
             <h4>Our Social Networks</h4>
             <p>Follow us on our social media accounts for more details and offer</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="https://instagram.com/amazebasket?igshid=1mesagaa2frq0" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="#" class="twitter"><img src="assets/img/icons/facebook.svg" class="s-icons"></a>
+              <a href="#" class="facebook"><img src="assets/img/icons/instagram.svg" class="s-icons"></a>
+              <a href="#" class="instagram"><img src="assets/img/icons/linkedin.svg" class="s-icons"></a>
+              <a href="#" class="linkedin"><img src="assets/img/icons/twitter.svg" class="s-icons"></a>
             </div>
           </div>
 
@@ -256,13 +263,13 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Amaze Basket</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>App Page</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
   <!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top"><img src="assets/img/icons/up-arrow.svg" class="u-icon"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
