--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Privacy & Policy - Amaze Basket</title>
+  <title>Privacy & Policy - App Page</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -19,8 +19,8 @@
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -34,7 +34,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><img src="assets/img/logo.svg" alt="" class="img-fluid"><span class="logo-text">  Amaze Basket</span></a>
+        <a href="index.html"><img src="assets/img/logo.svg" alt="" class="img-fluid"><span class="logo-text">  App Page</span></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -65,10 +65,10 @@
             <div class="row" data-aos="fade-up">
               <div class="col-12">
                 <p>
-                  Amaze Basket built the Amaze Basket app as a Commercial app. This SERVICE is provided by Amaze Basket and is intended for use as is.
+                  App Page built the App Page app as a Commercial app. This SERVICE is provided by App Page and is intended for use as is.
                   This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.<br>
                   If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.<br>
-                  The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Amaze Basket unless otherwise defined in this Privacy Policy.<br>
+                  The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at App Page unless otherwise defined in this Privacy Policy.<br>
                 </p><br>
                 <h5>Information Collection and Use</h5>
                 <p>For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to phone number, Name, Address. The information that we request will be retained by us and used as described in this privacy policy.<br>
@@ -150,7 +150,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
-            <p>To get out daily new deals and offers subscribe to Amaze Basket.</p>
+            <p>To get out daily new deals and offers subscribe to App Page.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -164,24 +164,24 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-contact" data-aos="fade-up">
-            <h3>Amaze Basket</h3>
+            <h3>App Page</h3>
             <p>
               Your One Stop solution <br>
               for your daily Groceries <br>
               need.<br><br>
-              <strong>Phone:</strong> <a href="tel : +91 96193 88755">+91 96193 88755</a><br>
-              <strong>Email:</strong> <a href="mailto: info.128bytes@gmail.com">info.128bytes@gmail.com</a><br>
+              <strong>Phone:</strong> <a href="#">+91 9xxxx 1234</a><br>
+              <strong>Email:</strong> <a href="#">info@example.com</a><br>
             </p>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="100">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="icofont-rounded-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="about-us.html">About us</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="contact-us.html">Contact us</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="terms-conditions.html">Terms & Conditions</a></li>
-              <li><i class="icofont-rounded-right"></i> <a href="privacy-policy.html">Privacy policy</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about-us.html">About us</a></li>
+              <li><a href="contact-us.html">Contact us</a></li>
+              <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+              <li><a href="privacy-policy.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -189,10 +189,10 @@
             <h4>Our Social Networks</h4>
             <p>Follow us on our social media accounts for more details and offer</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="https://instagram.com/amazebasket?igshid=1mesagaa2frq0" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="#" class="twitter"><img src="assets/img/icons/facebook.svg" class="s-icons"></a>
+              <a href="#" class="facebook"><img src="assets/img/icons/instagram.svg" class="s-icons"></a>
+              <a href="#" class="instagram"><img src="assets/img/icons/linkedin.svg" class="s-icons"></a>
+              <a href="#" class="linkedin"><img src="assets/img/icons/twitter.svg" class="s-icons"></a>
             </div>
           </div>
 
@@ -202,23 +202,22 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Amaze Basket</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>App Page</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
   <!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top"><img src="assets/img/icons/up-arrow.svg" class="u-icon"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/animation.js"></script>
+  <script src="assets/js/another-main.js"></script>
 
 </body>
 
